--- a/templates/externals.html
+++ b/templates/externals.html
@@ -1,4 +1,20 @@
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+<!--使markdown支持latex-->
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+    jax: ["input/TeX", "output/HTML-CSS"],
+    tex2jax: {
+        inlineMath: [ ['$', '$'] ],
+        displayMath: [ ['$$', '$$']],
+        processEscapes: true,
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
+    },
+    messageStyle: "none",
+    "HTML-CSS": { preferredFont: "TeX", availableFonts: ["STIX","TeX"] }
+});
+</script>
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default"></script>
+<!--载入本地js文件-->
 {% load staticfiles %}
 <script type="text/javascript" src="{% static "js/highlight.pack.js" %}"></script>
 <script>hljs.initHighlightingOnLoad();</script>
