--- a/templates/post.html
+++ b/templates/post.html
@@ -5,8 +5,7 @@
 <div class="posts">
     <section class="post">
         <header class="post-header">
-            <h3 class="post-title">{{ post.title }}</h3>
-
+            <h2 class="post-title">{{ post.title }}
                 <p class="post-meta">
                     <a class="post-list__meta--date date" href="#">{{ post.date_time |date:'Y M d'}}</a>
                     &#8226; 
@@ -14,9 +13,10 @@
                       <a class="post-category post-category-pure" href="{% url 'search_tag' tag=tag %}">{{ tag.tag_name }}</a>
                     {% endfor %}
                 </p>
+            </h2>
         </header>
         
-        <div class="post-description">
+        <div class="excerpt post-description post-content">
             <p>
                 {{ post.content|custom_markdown  }}
             </p>
