--- a/templates/side-panel.html
+++ b/templates/side-panel.html
@@ -5,7 +5,7 @@
     <div class="panel-main__inner panel-inverted">
       <div class="panel-main__content">
         <!--头像-->
-        <a href="{% url 'base' %}" title="前往 {{ site.title }} 的主页" class="blog-button">
+        <a href="{% url 'base' %}" title="前往 {{ site.title }} 的主页" class="blog-button logo-a">
           <img src="{% static "images/avatar.jpg" %}" width="80" alt="{{ site.title }} logo" class="panel-cover__logo logo" />
         </a>
         <!--昵称-->
