improve post view

--- a/templates/post.html
+++ b/templates/post.html
@@ -24,5 +24,6 @@
     </section>
     {% include "comment.html" %}
     {% include "duoshuo.html" %}
+    {% include 'side-bar.html' %}
 </div><!-- /.blog-post -->
 {% endblock %}     
