--- a/templates/externals.html
+++ b/templates/externals.html
@@ -20,3 +20,5 @@ MathJax.Hub.Config({
 <script>hljs.initHighlightingOnLoad();</script>
 
 <script type="text/javascript" src="{% static "js/main.js" %}"></script>
+<script type="text/javascript" src="{% static "js/widget-move.js" %}"></script>
+<script type="text/javascript" src="{% static "js/jquery.poshytip.min.js" %}"></script>
