--- a/templates/head.html
+++ b/templates/head.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.gdgdocs.org/css?family=Lobster" rel="stylesheet" type="text/css">
   {% load staticfiles %}
   <link rel="stylesheet" href="{% static "css/main.css" %}">
-
+  <link rel="stylesheet" href="{% static "css/tip-twitter/tip-twitter.css" %}">
   <!--阅读次数统计-->
   <script async src="https://dn-lbstatics.qbox.me/busuanzi/2.3/busuanzi.pure.mini.js"> </script>
 </head>
