--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="posts">
   <form class="pure-form pure-menu-horizontal" action="/search/" method="get">
-    <input class="pure-input-2-2" type="text" name="s" placeholder="search">
+    <input class="pure-input-2-2" style="width:100%;" type="text" name="s" placeholder="search">
   </form>
   <section class="post-hr">
     <hr>
