--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -110,6 +110,8 @@ h3 {
     color: #fff;
     background: #999;
     font-size: 80%;
+    display:inline-block;
+    line-height:18px;
 }
     .post-category-design {
         background: #5aba59;
