--- a/templates/archives.html
+++ b/templates/archives.html
@@ -3,9 +3,9 @@
 {% block content %}
 <div class="posts">
     <form class="pure-form pure-menu-horizontal" action="/search/" method="get">
-        <input class="pure-input-2-2" type="text" name="s" placeholder="search">
+        <input class="pure-input-2-2" style="width:100%;" type="text" name="s" placeholder="search">
     </form>
-    <section class="post">
+    <section class="post-hr">
         <hr>
     </section>
 
@@ -32,5 +32,6 @@
             {% endfor %}
         </ol>
     {% endif %}
+    {% include "side-bar.html" %}
 </div><!-- /.blog-post -->
 {% endblock %}      
