--- a/templates/comment.html
+++ b/templates/comment.html
@@ -1,45 +1,59 @@
 
 <section class="comment-area">
-<h2>留下你的评论</h2>
+    <section class="post-hr">
+        <hr>
+    </section>
     <form action="{% url 'comments:post_comment' post.pk %}" method="post" class="comment-form">
         {% csrf_token %}
         <div class="row">
-            <div class="col-md-4">
-                <label for="{{ form.name.id_for_label }}">Name:</label>
+            <span class="input input--jiro">
                 {{ form.name }}
                 {{ form.name.errors }}
-            </div>
-            <div class="col-md-4">
-                <label for="{{ form.email.id_for_label }}">Email:</label>
+                <label class="input__label input__label--jiro" for="{{ form.name.id_for_label }}">
+                    <span class="input__label-content input__label-content--jiro">Name</span>
+                </label>
+            </span>
+
+            <span class="input input--jiro">
                 {{ form.email }}
                 {{ form.email.errors }}
-            </div>
-            <div class="col-md-4">
-                <label for="{{ form.url.id_for_label }}">Url:</label>
+                <label class="input__label input__label--jiro" for="{{ form.email.id_for_label }}">
+                    <span class="input__label-content input__label-content--jiro">Email</span>
+                </label>
+            </span>
+
+            <span class="input input--jiro">
                 {{ form.url }}
                 {{ form.url.errors }}
-            </div>
-            <div class="col-md-12">
-                <label for="{{ form.text.id_for_label }}">Comment:</label>
+                <label class="input__label input__label--jiro" for="{{ form.url.id_for_label }}">
+                    <span class="input__label-content input__label-content--jiro">Url</span>
+                </label>
+            </span>
+
+            <span class="input-block-level">
                 {{ form.text }}
                 {{ form.text.errors }}
-                <button type="submit"><span>发表</span></button>
-            </div>
+            </span>
+
+            <button type="submit" class="btn btn-primary comment-submit"><span>发表</span></button>
+
         </div>    <!-- row -->
     </form>
+    <hr>
     <div class="comment-list">
-        <h2>评论列表</h2>
         <ul class="list-unstyled">
             {% for comment in comment_list %}
                 <li class="comment-item">
                     <span class="name">{{ comment.name }}</span>
                     <time class="date">{{ comment.created_time }}</time>
-                    <div class="text">
+                    <div class="text" style="font-size:14px;padding-left:28px">
                         {{ comment.text }}
                     </div>
                 </li>
             {% empty %}
-                暂无评论
+              <section class="post-hr">
+                <hr>
+              </section>
             {% endfor %}
         </ul>
     </div>
