--- a/templates/side-panel.html
+++ b/templates/side-panel.html
@@ -1,5 +1,5 @@
 {% load staticfiles %}
-<header class="panel-cover {% if page.layout == 'post' or page.layout == 'page' %}panel-cover--collapsed{% endif %}" style="background-image: url('{% static "images/background-cover.jpg" %}')">
+<header class="panel-cover  {% if page.layout == 'post' or page.layout == 'page' %}panel-cover--collapsed{% else %}isHidden{% endif %}" style="background-image: url('{% static "images/background-cover.jpg" %}')">
   <div class="panel-main">
 
     <div class="panel-main__inner panel-inverted">
@@ -70,4 +70,6 @@
     <div class="panel-cover--overlay cover-disabled"></div>
     {% endif %}
   </div>
+  {% include 'side-icons.html' %}
+  {% include 'to-top.html' %}
 </header>
