--- a/templates/source.html
+++ b/templates/source.html
@@ -31,7 +31,7 @@
         </div>
         <div style="margin-bottom: 80px"></div>
     {% endfor %}
-
+{% include 'side-bar.html' %}
 </div><!-- /.blog-post -->
 
 {% endblock %}    
